fix code header spacing and copy labels

--- a/assets/css/extended/codeblock.css
+++ b/assets/css/extended/codeblock.css
@@ -26,7 +26,7 @@ code {
   display: block;
   height: 2.2rem;
   line-height: 2.2rem;
-  padding-left: 3.5rem;
+  padding-left: 4.6rem;
   background: var(--code-header);
   color: var(--code-header-text);
   font-weight: 600;
